--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Jenkins Test Page</title>
+    <title>Jenkins CI/CD Demo</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+
+        .container {
+            background: rgba(0, 0, 0, 0.3);
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+        }
+
+        h1 {
+            margin-bottom: 15px;
+            font-size: 32px;
+        }
+
+        p {
+            font-size: 18px;
+        }
+
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+            opacity: 0.8;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello from Jenkins CI/CD 🚀</h1>
-    <p>If you can see this, Jenkins build worked!</p>
+    <div class="container">
+        <h1>🚀 Jenkins CI/CD is Working!</h1>
+        <p>This page is deployed successfully from your EC2 server.</p>
+        <div class="footer">
+            DevOps Practice Project | AWS + Jenkins
+        </div>
+    </div>
 </body>
 </html>
